Fix image zoom overflow

--- a/src/components/gallery.module.css
+++ b/src/components/gallery.module.css
@@ -13,7 +13,7 @@
 }
 
 .gallery > :hover {
- transform: scale(1.03);
+ transform: scale(1.02);
  transition: ease 0.5s;
  cursor: pointer;
 }
